# ACT

./: CheckTakeTransitions.py  Common_Public.py  CopyLayerForOtherTakes.py  FixTakesTimeSpan.py  LICENSE  PrintAnimatedTakesForSelection.py  README.md  RenderFromACameraSwitcher.py  project_common.py
SublimeText3/AnimationTooltip/: animation_tooltip.py
Tools/FbxUnpack/: FbxUnpack.cpp  getopt.c
docs/: AnimLiveBridgeAPI.md  FBXExt_DrivenKeys.md  FbxUnpack.md  LiveBridgeDevices.md  Plugins.md  Scripts.md  SublimeTextExtensions.md
maya/live_streaming/: liveStreamingPlugin.py
maya/maya_nodes/: ava_sine_node.py
motionbuilder/plugins/: CMakeLists.txt
motionbuilder/plugins/AnimLiveBridge/: AnimLiveBridge.cpp  AnimLiveBridge.h  AnimLiveBridge.i  AnimLiveBridge.py  AnimLiveBridgeNetwork.h  AnimLiveBridgeSession.cpp  AnimLiveBridgeSession.h  AnimLiveBridgeSharedMemory.cpp  AnimLiveBridgeSharedMemory.h
motionbuilder/plugins/Device_LiveBridge/: client_device.cxx  client_device.h  client_hardware.cxx  client_hardware.h  client_layout.cxx  client_layout.h  device_main.cxx  server_device.cxx  server_device.h  server_hardware.cxx  server_hardware.h  server_layout.cxx  server_layout.h  shared.cxx  shared.h
motionbuilder/plugins/DrivenKeys_MB/: Common_MoBu.cxx  MBDrivenKeysDataPlugin.cxx  mbextension.h
motionbuilder/plugins/DrivenKeys_Maya/: Common_Maya.cxx  MayaDrivenKeysDataPlugin.cxx  mayaextension.h
motionbuilder/plugins/DrivenKeys_Shared/: Common.cpp  Common.h
motionbuilder/plugins/MarkerWire/: Main.cxx  MarkerWire.cxx  MarkerWire.h  MarkerWireManip.cxx  MarkerWireManip.h
motionbuilder/plugins/RelationBoxes/: boxes.cxx  boxes.h  main.cxx
motionbuilder/plugins/Tests/: AnimLiveBridgeTest.cpp  AnimLiveBridgeTest.py
motionbuilder/plugins/cmake/: Maya.cmake  MoBu.cmake
motionbuilder/python_startup/: CheckTakeTransitions.py
motionbuilder/scripts/: CopyLayerForOtherTakes.py  PrintAnimatedTakesForSelection.py  RenderFromACameraSwitcher.py
